--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     font-family: var(--mainFont);
     background-color: #fff;
     color: #555;
+    overflow-x: hidden;
 }
 
 /* NAV */
@@ -87,10 +88,9 @@ header {
 /* SECTION */
 section {
     width: 100vw;
-    padding: 2rem;
     box-sizing: border-box;
     text-align: center;
-    margin-bottom: 2rem;
+    margin-bottom: 5rem;
 }
 
 .sectionTitle {
@@ -152,9 +152,40 @@ section {
     font-size: 1.2rem;
 }
 
+/* TESTIMONIAL */
+.testimonialCard {
+    width: 90vw;
+    max-width: 800px;
+    background-color: white;
+    margin-inline: auto;
+}
+
+.testimonialContent {
+    font-size: 1.2rem;
+}
+
+/* INTEREST */
+.actionButton {
+    border: 0;
+    border-radius: 10px;
+    background-color: var(--blue);
+    color: white;
+    padding: 10px 25px 10px 20px;
+    margin: 1rem auto;
+    font-size: 1.3rem;
+    display: flex;
+    width: fit-content;
+    text-decoration: none;
+}
+
+.actionButton span {
+    transform: translate(5px, 2px);
+}
+
 /* CONTACT */
 .contactEmail {
     color: var(--blue);
+    text-align: center;
 }
 
 /* FOOTER */
